--- a/src/components/fronted.css
+++ b/src/components/fronted.css
@@ -1,3 +1,146 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+
+:root{
+    
+}
+
+*{
+    margin:0;
+}
+
+body{
+    font-family: "Poppins",sans-serif;
+}
+
+.container{
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 8px;
+    height:72px;
+}
+
+nav ul{
+    display: flex;
+    gap:24px;
+    list-style-type: none;
+    font-weight: 500;
+}
+
+nav li{
+    font-size:18px ;
+    cursor: pointer;
+}
+
+.contact_section{
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-top: 5px;
+}
+
+.contact_section h1{
+    font-size:48px;
+    font-weight: 800;
+}
+
+.contact_section p{
+    font-weight: 500;
+}
+
+.container1{
+    display: flex;
+    max-width: 1000px;
+    margin-left: 7%;
+    margin-top: 3%;
+}
+
+
+
+.primary-btn{
+    padding: 18px 20px;
+    background-color: black;
+    color:white;
+    border-radius: 5px;
+    font-size: 16px;
+   
+}
+
+
+
+.primary-btn1{
+    padding: 18px 60px;
+    background-color: black;
+    color:white;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-left: 10px;
+}
+
+.img2{
+    height:470px;
+    width:600px;
+   margin-left: 50%;
+   border-radius: 10px;
+}
+
+.primary-btn2{
+    padding: 12px 140px;
+    margin-top: 15px;
+    border-radius: 10px;
+    width: 100%;
+}
+
+.form1{
+   margin-left: 5%;
+
+}
+
+.button1{
+    background-color: black;
+    color:white;
+    padding: 10px 80px;
+    float: right;
+    margin-right: 23px;
+    margin-top: 10px;
+    border-radius: 10px;
+    font-size: 15px;
+}
+
+.form_control{
+    display: flex;
+    flex-direction: column;
+    width:100%;
+    position: relative;
+    margin-top: 5%;
+}
+
+.form_control input{
+ height: 40px;
+ padding: 0 8px;
+ width:90%;
+}
+
+.form_control label{
+position: absolute;
+top:-10px;
+left:10px;
+background-color: white;
+padding: 0 10px;
+font-size: 14px;
+}
+
+.textarea{
+    height: 150px;
+    width:93%;
+}
+
+
 .img1{
     width: 50px;
     height: 50px;
